--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,16 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0|~6.0"
+    "phpunit/phpunit": "~7.0"
   },
   "autoload": {
     "psr-4": {
       "Curl\\": "src/Curl/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Curl\\Tests\\": "tests/Curl/"
     }
   }
 }
