--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,25 @@
   "name": "khs1994/curl",
   "description": "curl SDK",
   "keywords": [
+    "chinese",
+    "shanxi",
+    "datong",
+    "khs1994",
     "curl",
     "SDK"
   ],
   "homepage": "https://github.com/khs1994-php/curl",
   "type": "library",
   "license": "MIT",
-  "authors": [{
-    "name": "khs1994",
-    "email": "khs1994@khs1994.com",
-    "homepage": "https://khs1994.com"
-  }],
+  "authors": [
+    {
+      "name": "khs1994",
+      "email": "khs1994@khs1994.com",
+      "homepage": "https://khs1994.com"
+    }
+  ],
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0"
