--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
       "Curl\\Tests\\": "tests/Curl/"
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
