--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,6 @@
 /phpunit.xml export-ignore
 /CHANGELOG.md export-ignore
 /CONTRIBUTING.md export-ignore
+
+composer.json merge=ours
+CHANGELOG.md  merge=ours
