master is next version 18.12 [skip ci]

--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,11 @@
       "Curl\\Tests\\": "tests/Curl/"
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "18.06-dev"
+      "dev-master": "18.12-dev"
     }
   }
 }
